Fixes missing scrollbar in docker images
Fixes #15
Root cause was actually that the joint library had changed, and it was not noticed in the developer system, as that was still on an older version.

--- a/app/styles/modeleditors/case/casemodeleditor.css
+++ b/app/styles/modeleditors/case/casemodeleditor.css
@@ -26,7 +26,7 @@
     bottom: 0px;
     left: 0px;
     right: 0px;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 .paper-container {
